# collectarr-core

./: .env.example  .env.unraid.example  .gitignore  .releaserc.json  AGENTS.md  CHANGELOG.md  DEPRECATION_SUMMARY.md  Dockerfile  README.md  alembic.ini  docker-compose.devstack.yml  docker-compose.unraid.yml  docker-compose.yml  pyproject.toml  tmp_stats.sql
.github/: copilot-instructions.md  genai-code-review.yml  release.yml
.github/workflows/: catalog-badges.yml  docs-pages.yml  release.yml  tests.yml  validate-release-config.yml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_add_user_role.py  0003_add_story_arcs_and_characters.py  0004_add_metadata_payload_to_proposals.py  0005_add_tracking_entries.py  0006_remove_tracking_entries.py  0007_add_bundle_releases.py  202605110001_initial.py  202605110002_add_variant_thumbnails.py  202605110002_drop_central_personal_data.py  202605110003_metadata_proposals.py  202605140001_add_gcd_provider.py  202605140002_image_cache_entries.py  202605140003_provider_ingest_jobs.py  202605150001_admin_audit_logs.py  202605180001_series_relations.py  20260529_0001_pre_alembic_baseline.py  20260529_0002_promote_edition_structural_fields.py  20260529_0003_relax_character_identity.py  20260530_0001_add_title_extension.py  20260604_0001_add_admin_release_mapping_rules.py  20260624_1000_clean_schema_baseline.py  (+34 more)
app/: __init__.py  main.py  metadata_normalized.py  proposal_payload.py
contracts/: active-kinds.json  contract-manifest.json  metadata-field-schema.json  openapi.json  provider-support.json
docs/: architecture.md  bundle-release-design.md  bundle-release-implementation-tasks.md  contract-v2-vocabulary.md  deployment.md  field-schema.md  https-and-secrets.md  image-pipeline.md  implementation-plan.md  library-parity-contract.md  metrics.md  openapi.json  provider-support.md  repository-split.md  schema-data.json  schema-full.md  schema.html  schema.md  unraid.md
scripts/: dev-clean-state.ps1  dev-reset-pipeline.ps1  dev-reset-stack.ps1  dev-smoke-providers.ps1  dev-smoke-web.ps1  export_app_edit_fields.py  export_contract_bundle.py  export_field_schema.py  export_openapi.py  export_provider_support.py  export_schema_site.py  generate_catalog_badges.py  lib-dev.ps1
templates/: CHANGELOG.md.j2
tests/: conftest.py  helpers.py  test_admin_audit.py  test_admin_ingest.py  test_admin_proposals.py  test_admin_ui.py  test_anilist_provider.py  test_auth.py  test_bgg_provider.py  test_collection.py  test_comicvine_provider.py  test_core_hardening.py  test_export_schema_site.py  test_gcd_ingest_script.py  test_image_cache.py  test_image_mirror.py  test_media_catalog.py  test_metadata.py  test_metadata_proposals.py  test_migrations.py  test_storage.py  test_sync.py  test_worker.py
tools/: dev.ps1
(+267 files in other folders)
