[project]
name = "collectarr-backend"
version = "0.1.0"
description = "Collectarr metadata and library backend"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.13.3",
    "asyncpg>=0.30.0",
    "boto3>=1.35.34",
    "bcrypt>=4.0,<6",
    "email-validator>=2.2.0",
    "fastapi>=0.115.0",
    "httpx>=0.27.2",
    "imagehash>=4.3.1",
    "meilisearch>=0.31.6",
    "pillow>=10.4.0",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.5.2",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.12",
    "redis>=5.1.1",
    "sqlalchemy>=2.0.35",
    "uvicorn[standard]>=0.30.6"
]

[project.optional-dependencies]
dev = [
    "mypy>=1.11.0",
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.9"
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
# Default essentials plus import-sorting, pyupgrade, bugbear, comprehensions and
# simplify. E501 (line length) is intentionally not selected to avoid a large
# reformat. Ignored: B008 (FastAPI Depends() defaults are idiomatic), UP037
# (self-referential annotations are unquoted-unsafe without future annotations),
# and a few subjective UP/SIM rewrites.
select = ["E4", "E7", "E9", "F", "I", "UP", "B", "C4", "SIM"]
ignore = ["B008", "UP037", "UP042", "UP046", "SIM103", "SIM108"]

[tool.mypy]
python_version = "3.14"
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_ignores = false
check_untyped_defs = false
files = ["app"]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
